# dl-azure

./: README.md  pyproject.toml
.github/workflows/: publish-testpypi.yml  publish.yml
readme/: README.md
readme/guide/: 1_wiring_azure_into_an_experiment_repo.md
readme/technical/: 1_package_scope.md  2_executor_configuration.md  3_dataset_mounts_and_limitations.md
readme/tldr/: 1_install_and_submit.md
src/dl_azure/: __init__.py  init_extension.py
src/dl_azure/callbacks/: __init__.py  mlflow.py
src/dl_azure/datasets/: __init__.py  azure_compute_pad.py  azure_streaming_pad.py  base.py  pad.py
src/dl_azure/executors/: __init__.py  azure_compute.py
src/dl_azure/metrics_sources/: __init__.py  azure_mlflow.py
src/dl_azure/mlflow/: __init__.py
src/dl_azure/storage/: __init__.py  azcopy.py  cache.py  client.py
src/dl_azure/trackers/: __init__.py  azure_mlflow.py
tests/: test_dataset_foundations.py  test_executor_configuration.py  test_init_extension.py  test_package_import.py  test_tracking_components.py
