[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "deep-learning-azure"
version = "0.0.2a8"
description = "Generic Azure integration layer for dl-core."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "deep-learning-core==0.0.2a7",
    "azure-ai-ml==1.31.0",
    "azure-identity==1.25.1",
    "azure-storage-blob==12.19.0",
    "azureml-core==1.60.0.post1",
    "azureml-mlflow==1.60.0.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Blazkowiz47/dl-azure"
Documentation = "https://github.com/Blazkowiz47/dl-azure/tree/main/readme"
Repository = "https://github.com/Blazkowiz47/dl-azure"
Issues = "https://github.com/Blazkowiz47/dl-azure/issues"

[project.entry-points."dl_core.init_extensions"]
azure = "dl_azure.init_extension:AzureInitExtension"

[tool.uv.sources]
"deep-learning-core" = { path = "../dl-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/dl_azure"]
